--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,13 @@
     <string name="account_create">Создание аккаунта</string>
     <string name="student">Я ученик/студент</string>
     <string name="teacher">Я учитель</string>
+    <!-- RegistrationActivity strings-->
+    <string name="username">Имя пользователя</string>
+    <string name="email_address">Электронная почта</string>
+    <string name="password">Пароль</string>
+    <string name="repeat_password">Повторите пароль</string>
+    <string name="or">Или</string>
+    <string name="sing_in_with_google">Войти с помощью Google</string>
+    <string name="already_have_acc">Уже есть аккаунт?</string>
+    <string name="log_in_underline"><u>Войти</u></string>
 </resources>
