CreateActivity changes - CreateActivity code was refactored - Now user can course appears in database - Created support classes for database work - Added new values in colors.xml and strings.xml - activity_create.xml updated
Signed-off-by: “Parkhomenko <parkhomenko2049@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,4 +80,7 @@
         <item>На дому у учителя</item>
         <item>Офис</item>
     </string-array>
+
+    <!-- Snackbar notify strings-->
+    <string name="course_created_successfully">Курс создан успешно!</string>
 </resources>
