Fixed TeacherCoursesAdapter and maked courses_card

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,7 +55,7 @@
     <string name="add_example_of_video">Добавьте видео пример вашего урока </string>
     <string name="insert_course_price">Введите цену курса</string>
     <string name="insert_count">Введите количество участников в группе</string>
-    <string name="create_course">Создать курс</string>
+<!--    <string name="create_course">Создать курс</string>-->
 
     <!-- SchoolSubjectsSpinner strings-->
     <string-array name="school_subject">
